# tecs

./: CMakeLists.txt  README.md
docs/: class_debug.pu  class_ecs.pu  class_job.pu  class_reflection.pu  class_registry.pu  class_system.pu  class_utility.pu  tecs_class.pu
docs/platform/: class_device.pu  class_input.pu  class_platform.pu  class_platform_system.pu  class_window.pu
docs/tecs/: class_debug.pu  class_job.pu  class_registry.pu  class_system.pu
game/: CMakeLists.txt
game/game/platform_window/cmake/: platform_windowConfig.cmake.in
tecs/: CMakeLists.txt  tecs.sln
tecs/data/: entity_log.csv  job_log.csv  system_log.csv
tecs/game/main/: CMakeLists.txt
tecs/game/main/cmake/: mainConfig.cmake.in
tecs/game/main/src/: main.cpp
tecs/game/platform/: CMakeLists.txt
tecs/game/platform/cmake/: platformConfig.cmake.in
tecs/game/platform/include/platform/: platform.h  window.h  window_container.h  window_context.h  window_system.h  window_win32.h
tecs/game/platform/src/: pch.h  window_container.cpp  window_system.cpp  window_win32.cpp
tecs/game/platform/tests/: window_container.cpp
tecs/game/platform_window/: CMakeLists.txt
tecs/game/platform_window/include/platform_window/: game.h  platform_window.h
tecs/game/platform_window/src/: game.cpp
tecs/game/platform_window/tests/: test.cpp
tecs/game/window/: CMakeLists.txt
tecs/game/window/cmake/: windowConfig.cmake.in
tecs/game/window/include/window/: window.h  window_win32.h
tecs/game/window/src/: window_win32.cpp
tecs/game/window/tests/: window.cpp
tecs/sample/: sample.vcxproj
tecs/tecs/: CMakeLists.txt  tecs.cpp  tecs.h  tecs.vcxproj  tecs.vcxproj.filters
tecs/tecs/cmake/: tecsConfig.cmake.in
tecs/tecs/docs/: tecs_class.pu
tecs/tecs/include/tecs/: class_template.h  debug.h  ecs.h  file_io.h  guid.h  id.h  job.h  reflection.h  registry.h  service.h  system.h  tecs.h
tecs/tecs/src/: debug.cpp  ecs.cpp  file_io.cpp  id.cpp  job.cpp  pch.h  reflection.cpp  registry.cpp  service.cpp  system.cpp  tecs.cpp
tecs/tecs/tests/: debug.cpp  ecs.cpp  id.cpp  job.cpp  reflection.cpp  registry.cpp  service.cpp  system.cpp  tecs_test.cpp
tecs/unit_test/: unit_test.vcxproj
